--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
+        "genealabs/laravel-caffeine": "^0.8.1",
         "intervention/image": "^2.4",
         "laravel/framework": "5.8.*",
         "laravel/passport": "^7.2",
@@ -30,7 +31,9 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": []
+            "dont-discover": [
+                "laravel/dusk"
+            ]
         }
     },
     "autoload": {
